<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/toolbar_logo"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/text_view_favourites"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/clickable_drawer_item"
                android:fontFamily="@font/proximanova_bold"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/favourites"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_about"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/clickable_drawer_item"
                android:fontFamily="@font/proximanova_semibold"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/about_us"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/clickable_drawer_item"
                android:fontFamily="@font/proximanova_semibold"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/contact_us"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>