<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:openDrawer="left">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include layout="@layout/tool_bar" />


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swiperefreshlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:orientation="vertical">


                <TextView
                        android:id="@+id/exchange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:focusableInTouchMode="true"
                        android:fontFamily="@font/proximanova_bold"
                        android:freezesText="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:padding="10dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp">

                        <TextView
                                android:id="@+id/day_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:text="@string/day" />

                        <TextView
                                android:id="@+id/weather_day"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="30°"
                                android:textColor="@color/colorBlack" />

                        <TextView
                                android:id="@+id/night_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:text="@string/night" />

                        <TextView
                                android:id="@+id/weather_night"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="10°"
                                android:textColor="@color/colorBlack" />

                    </LinearLayout>

                    <Spinner
                            android:id="@+id/spinner_weather"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center"
                            android:minWidth="150dp" />
                </RelativeLayout>

                <TextView
                        android:id="@+id/rubric_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanova_bold"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:descendantFocusability="blocksDescendants" />
            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>


    <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:visibility="visible">

        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                        <ImageView
                                android:id="@+id/logo_main"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:layout_weight="1.1"
                                app:srcCompat="@drawable/toolbar_logo" />

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0.9"
                                android:gravity="end"
                                android:paddingEnd="8dp">

                            <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                <LinearLayout
                                        android:id="@+id/language_uzbek"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:background="@drawable/language_card_back"
                                        android:backgroundTint="@color/colorPrimary"
                                        android:clickable="true"
                                        android:focusable="true"
                                        app:cardElevation="4dp">

                                    <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:paddingStart="8dp"
                                            android:paddingEnd="8dp"
                                            android:text="O'zb"
                                            android:textColor="@color/colorBlack" />
                                </LinearLayout>

                                <LinearLayout
                                        android:id="@+id/language_krill"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:background="@drawable/language_card_back"
                                        android:rotation="180"
                                        app:cardElevation="4dp">

                                    <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:paddingStart="8dp"
                                            android:paddingEnd="8dp"
                                            android:rotation="180"
                                            android:text="Ўзб"
                                            android:textColor="@color/colorBlack" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerview_drawer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    <TextView
                            android:id="@+id/text_view_favourites"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/clickable_drawer_item"
                            android:fontFamily="@font/proximanova_bold"
                            android:foreground="?selectableItemBackground"
                            android:gravity="center_vertical"
                            android:padding="15dp"
                            android:text="@string/favourites"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/actual_theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/clickable_drawer_item"
                            android:fontFamily="@font/proximanova_bold"
                            android:foreground="?selectableItemBackground"
                            android:gravity="center_vertical"
                            android:padding="15dp"
                            android:text="@string/actual_theme"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/text_view_about"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="50dp"
                            android:background="@drawable/clickable_drawer_item"
                            android:fontFamily="@font/proximanova_semibold"
                            android:foreground="?selectableItemBackground"
                            android:gravity="center_vertical"
                            android:paddingLeft="15dp"
                            android:text="@string/about_us"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/text_view_contact"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/clickable_drawer_item"
                            android:fontFamily="@font/proximanova_semibold"
                            android:foreground="?selectableItemBackground"
                            android:gravity="center_vertical"
                            android:paddingLeft="15dp"
                            android:text="@string/contact_us"
                            android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>